@@ -20,6 +20,7 @@ set -e
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
+datarootdir=@datarootdir@
 . ${libdir}/@PACKAGE@/grub-mkconfig_lib
 
 CLASS="--class gnu --class os"
